# dotfiles

./: .spacemacs  .tmux.conf  .webui_secret_key  4  GEMINI.md  MESH_SIMULATION_INSTRUCTIONS.md  README.md  TESTING.md  [  bierbasis.nix  bierzelt.nix  colors.nix  factory-reset-immich.sh  flake.nix  home.nix  justfile  notes  result  run-vm-test.sh  sync_repos.sh  test-wieselburg.sh  validate-wieselburg.sh
bierbasis/: configuration.nix  disko.nix  gaming.nix  hardware-configuration.nix  home.nix  nextcloud.nix  nvidia.nix  secenv-quick.nix  secenv.nix
bierzelt/: configuration.nix  hardware-configuration.nix  home-alf.nix  home.nix  result
config/: flake.nix  result
containers/: open-webui.nix
content-factory/: .gitignore  GEMINI.md  ai_transformer.py  alembic.ini  approval_flow.py  approval_logic.py  blog_engine.py  check_secrets.py  flake.nix  image_gen.py  image_generator.py  list_models.py  main.py  models.py  orchestrator.py  persona.py  publisher.py  pyproject.toml  requirements.txt  researcher.py  scraper.py  shell.nix  test_e2e_secrets.py  test_maya.py  test_maya_init.py  utils.py  verify_issue.py  windmill_scripts.py  windmill_trigger.py
content-factory/migrations/: env.py
content-factory/migrations/versions/: 02fe75646f72_final_schema.py  03_add_comparison_cols.py
content-factory/persona/: maya.md
home/: home.nix
hyprland/: flake.nix
linode/: configuration.nix  hardware-configuration.nix
modules/: agentic.nix  alacritty.nix  content-factory-cli.nix  dev.nix  email.nix  f5vpn.nix  firefox.nix  gdrive-secrets.nix  gemini.nix  gh-auth.nix  (+30 more)
(+65 files in other folders)
